BOARD18 2.7.8 Release Notes
 
Changes from 2.7.7 Release:
Implemented fix for Issue 219 - "Accept Move"&"Map/Market" Buttons 

BOARD18 2.7.7 Release Notes
 
Changes from 2.7.6 Release:
Backed out changes for fix for Issue 238 Part1
Removed some obsolete material from Documentation directory.
Implemented fix for Issue 199 - Remove tempRandom.php module.
Implemented fix for Issue 228 - Remove "Send Broadcast" function

BOARD18 2.7.6 Release Notes
 
Changes from 2.7.5 Release:
Implemented fix for Issue 238 Part1
NOTE: Before upgrading to this list please read the note at
https://wiki.board18.org/w/Note_for_upgrade_to_Release_2.7.6
NOTE: This Release is backed out by release 2.7.7. Do not use.

BOARD18 2.7.5 Release Notes
 
Changes from 2.7.4 Release:
Implemented fix for Issue 229 - Add key to the game_player table.
Implemented fix for Issue 241 - Add missing code to access-denied.html page.
Fixed clean function in emailPlayer.php.
Fixed comment in sendEmail.php

BOARD18 2.7.4 Release Notes
 
Changes from 2.7.3 Release:
Implemented fix for Issue 200 - Fix the second copy of access-denied.html.
Removed the "require_once('tempRandom.php')" line from emailPassword.php.

BOARD18 2.7.3 Release Notes
 
Changes from 2.7.2 Release:
Implemented fix for Issue 195 - Field size discrepancy in board18Players.php.
Implemented fix for Issue 197 - Invalid return code from checkForUpdate.
Make some minor corrections to code in board18Map7.js and board18Market7.js.
Make some minor corrections to code in checkForUpdate.php.

BOARD18 2.7.1 Release Notes
 
Changes from 2.7.0 Release:
Implemented fix for Issue 198 - Enhance PHP error logging - part 6

BOARD18 2.7.0 Release Notes
 
Changes from 2.6.9 Release:
Implemented fix for Issue 192 - Enhance PHP error logging - part 5
Implemented fix for Issue 193 - Field size discrepancy in board18Games.php
Implemented fix for Issue 196 - Actions fail (404) in long-running tab 
Remove unused <script> link from board18Map.php
