@@ -58,15 +58,12 @@ if (mysqli_connect_error()) {
 }
 
 $you = intval($_SESSION['SESS_PLAYER_ID']);
-$qry = "SELECT b.game_id, b.gname, c.bname, 
-               c.version, DATE(b.start_date) 
-          FROM game_player AS a 
-            JOIN (game AS b, box AS c)
-              ON (a.player_id = $you
-                AND a.game_id = b.game_id
-                AND b.status = 'Active'
-                AND b.box_id = c.box_id)
-          ORDER BY b.start_date DESC";
+$qry = "SELECT b.game_id, b.gname, c.bname, c.version, DATE(b.start_date) 
+           FROM game_player AS a 
+             JOIN game AS b ON ( b.game_id = a.game_id )
+             JOIN box AS c ON ( c.box_id = b.box_id )
+             WHERE a.player_id = $you and b.status = 'Active'
+           ORDER BY b.start_date DESC";
   $result = mysqli_query($link,$qry);
 if ($result) {
   if (mysqli_num_rows($result) === 0) { // no games.
