@@ -1,0 +1,50 @@
+<!doctype html>
+<html lang="en">
+  <!--
+  Copyright (c) 2021 Richard E. Price under the 
+  Creative Commons Attribution Share Alike license.
+  A copy of this license can be found at 
+  http://creativecommons.org/licenses/by-sa/3.0/
+  -->
+  <head>
+    <meta charset="utf-8" >
+       <title>BOARD18 Donations</title>
+    <link rel="shortcut icon" href="images/favicon.ico" >
+    <link rel="stylesheet" href="style/board18web.css" >
+  </head>
+  <body>
+    <div id="topofpage">
+      <div id="logo">
+        <img src="images/logo.png" alt="Logo"> 
+      </div>
+      <div id="heading">
+        <h1>BOARD18 Donations</h1>
+      </div>
+    </div>
+
+    <div id="leftofpage">
+
+    </div>
+
+    <div id="rightofpage"> 
+      <p style="font-size: 140%; font-weight:bold">
+        BOARD18 Donations</p>
+      <p>
+        I have created a PayPal account for BOARD18 in hopes that some of you 
+        will help to defray the expenses incurred by the BOARD18 
+        project. <br><br>
+        <span style="color: Green">
+        If you wish to do so, please use the link below to
+        make a donation to this account. </span>
+        <br><br>
+        Please limit your donations to $5 or less for now. 
+        If enough people donate on a regular basis, then this should be more 
+        than sufficient.
+      </p>
+      <p style="font-size: 140%; font-weight:bold">
+        <a href="https://www.paypal.com/donate?hosted_button_id=MHEV7BSUMU3QE">
+            Click Here for the Donation Page</a> 
+      </p>
+    </div>  
+  </body>
+</html>
