@@ -35,6 +35,9 @@
         <li><a href="https://wiki.board18.org/w/Main_Page">
             All BOARD18 Documentation</a></li>
         <li></li>
+        <li><a href="donate.html">
+            Donate to the BOARD18 Project</a></li>
+        <li></li>
         <li><a href="pnotice.html">
             BOARD18 Privacy Notice</a></li>
       </ul>
